Commit CSS changes

--- a/Mark12_PartC-main/index.html
+++ b/Mark12_PartC-main/index.html
@@ -5,17 +5,26 @@
     <meta name="viewport" content="width=device-width">
     <title>Hypotenuse</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
+    <nav>
+      <a class="style-class" href="../Mark12a_CalcSumOfTriangle-main/index.html">Is it a Triangle?</a>
+      <a class="style-class" href="../Mark12_PartB-main/index.html">Quiz Time</a>
+      <a class="style-class" href="../Mark12_PartC-main/index.html">Calculate the Hypotenuse</a>
+      <a class="style-class" href="../Mark12_PartD/index.html">Area of Triangle</a>
+      </nav>
+
     <h1>Calculate Hypotenuse</h1>
-    <div>
-      <label>a=</label>
-      <input type="number" id="side-input"/>
-     <label>b=</label>
-     <input type="number" id="side-input"/>
+    <div class="outer-div">
+      <label>Base</label>
+      <input type="number" id="side-input" class="style-inp"/>
+     <label>Height</label>
+     <input type="number" id="side-input" class="style-inp"/>
      <button id="calc-hypotenuse">Calculate Hypotenuse</button>
+     <div id="output"></div>
     </div>
-    <div id="output"></div>
+    
     
   </body>
   <script src="script.js"></script>
