--- a/Mark12_PartB-main/index.html
+++ b/Mark12_PartB-main/index.html
@@ -5,34 +5,55 @@
     <meta name="viewport" content="width=device-width">
     <title>Triangle Quiz</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
+    <nav>
+      <a class="style-class" href="../Mark12a_CalcSumOfTriangle-main/index.html">Is it a Triangle?</a>
+      <a class="style-class" href="../Mark12_PartB-main/index.html">Quiz Time</a>
+      <a class="style-class" href="../Mark12_PartC-main/index.html">Calculate the Hypotenuse</a>
+      <a class="style-class" href="../Mark12_PartD/index.html">Area of Triangle</a>
+      </nav>
+
     <h1>Triangle Quiz</h1>
     <form class="quiz-form">
       <div>
-        <p>Question1: What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
+        <p><strong>Question1: What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</strong></p>
       <label><input type="radio" name="question1" value="45°"/>45°</label> 
       <label><input type="radio" name="question1" value="90°"/>90°</label>
       <label><input type="radio" name="question1" value="60°"/>60°</label>
       </div>
       <div>
-        <p>Question2: If a triangle has an angle of 90 degrees, what is it called?</p>
+        <p><strong>Question2: If a triangle has an angle of 90 degrees, what is it called?</strong></p>
       <label><input type="radio" name="question2" value="acute"/>acute</label> 
       <label><input type="radio" name="question2" value="obtuse"/>obtuse</label>
       <label><input type="radio" name="question2" value="right-angled"/>right-angled</label>
     </div>
     <div>
-    <p>Question3: The triangle can be classified on the basis of?</p>
+    <p><strong>Question3: The triangle can be classified on the basis of?</strong></p>
       <label><input type="radio" name="question3" value="the no. of equal sides"/>the no. of equal sides</label> 
       <label><input type="radio" name="question3" value="the types of angles"/>the types of angles</label>
       <label><input type="radio" name="question3" value="length of line segments"/>length of line segments</label>
        <label><input type="radio" name="question3" value="both a and b"/>both a and b</label>
     </div>
-
-    <p>
+    <div>
+      <p><strong>Question4: How many sides are there in a triangle?</strong></p>
+        <label><input type="radio" name="question4" value="Three"/>Three</label> 
+        <label><input type="radio" name="question4" value="Four"/>Four</label>
+        <label><input type="radio" name="question4" value="Five"/>Five</label>
+         <label><input type="radio" name="question4" value="One"/>One</label>
+      </div>
+      <div>
+      <p><strong>Question5: How many corners are there in a triangle?</strong></p>
+      <label><input type="radio" name="question5" value="Three"/>Three</label> 
+      <label><input type="radio" name="question5" value="Four"/>Four</label>
+      <label><input type="radio" name="question5" value="Five"/>Five</label>
+       <label><input type="radio" name="question5" value="One"/>One</label>
+    </div>
+  </form>
+  <p class="btn-style">
     <button id="submit-answer">Submit Answers</button>
     </p>
-    </form>
     <div id="output"></div>
    <script src="script.js"></script>
   </body>
