--- a/Mark12a_CalcSumOfTriangle-main/index.html
+++ b/Mark12a_CalcSumOfTriangle-main/index.html
@@ -5,21 +5,30 @@
     <meta name="viewport" content="width=device-width">
     <title>Triangle Problem</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="../style.css">
    
   </head>
   <body>
+    <nav>
+      <a class="style-class" href="../Mark12a_CalcSumOfTriangle-main/index.html">Is it a Triangle?</a>
+      <a class="style-class" href="../Mark12_PartB-main/index.html">Quiz Time</a>
+      <a class="style-class" href="../Mark12_PartC-main/index.html">Calculate the Hypotenuse</a>
+      <a class="style-class" href="../Mark12_PartD/index.html">Area of Triangle</a>
+      </nav>
+      <div class="outer-style">
      <h1 class="heading">Is it a Triangle</h1>
-    <div>
-    <label for "Angle1">Angle1</label>
-    <input type="number" class ="input-angle1" />
-    <label for "Angle2">Angle2</label>
-    <input type="number" class ="input-angle2" />
-    <label for "Angle2">Angle3</label>
-    <input type="number" class ="input-angle3" />
+    <div class="inner-style">
+    <label for="Angle1">Angle1</label>
+    <input type="number" class ="style-inp input-angle1" />
+    <label for="Angle2">Angle2</label>
+    <input type="number" class ="style-inp input-angle2" />
+    <label for="Angle2">Angle3</label>
+    <input type="number" class ="style-inp input-angle3" />
     <button id="btn-calculate">Calculate Sum</button>
 </div>
-<div class="output"></div>
 
+<div class="output"></div>
+</div>
     <script src="script.js"></script>
   </body>
 </html>
