--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fun Triangle</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="./Mark12a_CalcSumOfTriangle-main/index.html">Is it a Triangle?</a>
-    <a href="./Mark12_PartB-main/index.html">Quiz Time</a>
-    <a href="./Mark12_PartC-main/index.html">Calculate the Hypotenuse</a>
-    <a href="./Mark12_PartD/index.html">Area of Triangle</a>
+    <h1 class="main-header"><em><strong>Welcome to Fun with Triangle</strong></em></h1>
+    <nav>
+    <a class="style-class" href="./Mark12a_CalcSumOfTriangle-main/index.html">Is it a Triangle</a>
+    <a class="style-class" href="./Mark12_PartB-main/index.html">Quiz Time</a>
+    <a class="style-class" href="./Mark12_PartC-main/index.html">Calculate the Hypotenuse</a>
+    <a class="style-class" href="./Mark12_PartD/index.html">Area of Triangle</a>
+    </nav>
 </body>
 </html>
